# CodeWars

./: CMakeLists.txt  README.md  compile.sh
katas/: CMakeLists.txt
katas/kyu5/: int32_to_ipv4.cpp
